@@ -16,7 +16,7 @@
 \begingroup% 
 \ifx\href\undefined%
 \gdef\href#1#2{%
-#2\footnote{\texttt{#1}}%
+#2\footnote{\url{#1}}%
 }%
 \fi\endgroup%
 
