@@ -117,3 +117,14 @@ Encoding: ISO8859_1
   key = {ism},
 }
 
+@TECHREPORT{Tushingham1993,
+  author = {A. M. Tushingham and W. R. Peltier},
+  title = {Relative Sea Level Database. {IGBP
+	 PAGES/World} {D}ata {C}enter-{A} for Paleoclimatology Data Contribution},
+  institution = {NOAA/NGDC Paleoclimatology Program},
+  year = {1993},
+  number = {93-016},
+  address = {Boulder CO, USA},
+  keywords = {data},
+}
+
