@@ -1,0 +1,7 @@
+5d,	-114000,	-98000,	247/119/255
+5c,	-98000,		-92000,  255/255/255
+5b,	-92000,		-80000,	163/73/255
+5a,	-80000,		-72000,  255/255/255
+4,	-72000,		-54000,	0/0/255
+3,	-54000,		-26000,	255/255/255
+2,	-26000,		-5000,	132/188/255
