@@ -1,0 +1,4 @@
+\subsection{Using \texttt{plotCFstats.py}}
+\begin{pycf}{plotCFstats.py -mi -p profname --not\_p -f data fenscan.nc fenscan-gthf.nc stats.ps}{\dir/figures/stats.eps}
+plots ice sheet statistics as a function of time. Single letter switches can be joined, e.g. the options \texttt{-m} and \texttt{-i} become \texttt{-mi} and switch on melt fractional area and average ice thickness. The ice extent along a profile is also calculated (\texttt{-p} option) and can be compared with a data file (\texttt{-f} switch).
+\end{pycf}
