@@ -1,5 +1,7 @@
-\section{Using \texttt{plotCFvar.py}}
+\subsection{Using \texttt{plotCFvar.py}}
 \texttt{plotCFvar.py} is used to plot a time slice of a 2D variable, such as ice thickness or basal velocities. Furthermore, a vertical slice can be specified if the field is three--dimensional such as the temperature or full velocity field. The displayed data can be clipped to the ice extent or area above sea--level. A three--dimensional effect can be created by illuminating the result.
+
+PyCF comes with a set of colourmaps for some variables, like ice thickness, topography, temperatures, etc. With the \texttt{--colourmap} option you can specify a custom colourmap. You can use any GMT colour map. You can automatically calculate a rainbow colourmap with the option \texttt{--colourmap=None}.
 
 \begin{pycf}{plotCFvar.py -vtopg fenscan.nc topo.ps}{\dir/figures/topo.eps}
 plots the bedrock topgraphy. The \texttt{-v} switch selects the variable. The first time slice is processed if no time slice is specified on the command line. 
@@ -19,6 +21,6 @@ plots the basal temperatures adjusted for its dependance on pressure (\texttt{--
 plots an enlargement of the basal velocity field. You can specify the geographic coordinates of the lower--left corner (\texttt{--llg}) and/or upper--right corner (\texttt{--urg}) to define the region to be plotted. Alternatively, you can also specify the corners in the projected coordinate system using \texttt{--llx} and \texttt{--urx}.
 \end{pycf}
 
-\begin{pycf}{plotCFvar.py -vbvel -cthk -t -17 --land -pprof --not\_p}{\dir/figures/bvelp.eps}
+\begin{pycf}{plotCFvar.py -vbvel -cthk -t -17 --land -pprof --not\_p fenscan.nc bvel.ps}{\dir/figures/bvelp.eps}
 plots a 2D field with a profile line. The \texttt{-p} selects a file containing coordinates of the profile. This option can be repeated to have more than one line. The \texttt{--not\_p} is short for \texttt{--not\_projected} and indicates that the coordinates have to be projected to the map coordinate system. Profile lines are labeled automatically, starting with A.
 \end{pycf}
